update i18n; fix bug upload img in resources editor; align center table header

--- a/src/styles/design/_global.scss
+++ b/src/styles/design/_global.scss
@@ -198,6 +198,9 @@ table tbody tr:nth-child(odd) {
             .ag-header-cell-label {
                 font-weight: $font-weight-default + 200;
                 text-align: center !important;
+                .ag-header-cell-text{
+                    width: 100%;
+                }
             }
         }
         .ag-row-odd,
